<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddProductActivity">

    <include
        android:id="@+id/layout_Toolbar"
        layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_Toolbar"
        android:layout_centerInParent="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_mar_med"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_mar_small"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_mar_small"
                    android:layout_marginLeft="@dimen/layout_mar_small"
                    android:layout_marginEnd="@dimen/layout_mar_small"
                    android:layout_marginRight="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:textColorHint="@android:color/darker_gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_ProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:hint="@string/label_prod_name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_med" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_mar_small"
                    android:layout_marginLeft="@dimen/layout_mar_small"
                    android:layout_marginEnd="@dimen/layout_mar_small"
                    android:layout_marginRight="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:textColorHint="@android:color/darker_gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_ProductCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:hint="@string/label_prod_category"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_med" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_mar_small"
                    android:layout_marginLeft="@dimen/layout_mar_small"
                    android:layout_marginEnd="@dimen/layout_mar_small"
                    android:layout_marginRight="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:textColorHint="@android:color/darker_gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_ProductQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:hint="@string/label_prod_quantity"
                        android:inputType="number"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_med" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_mar_small"
                    android:layout_marginLeft="@dimen/layout_mar_small"
                    android:layout_marginEnd="@dimen/layout_mar_small"
                    android:layout_marginRight="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:textColorHint="@android:color/darker_gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_ProductPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:hint="@string/label_prod_price"
                        android:inputType="number"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_med" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_mar_small"
                    android:layout_marginLeft="@dimen/layout_mar_small"
                    android:layout_marginEnd="@dimen/layout_mar_small"
                    android:layout_marginRight="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:textColorHint="@android:color/darker_gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_SupplierName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:hint="@string/label_prod_sup_name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_med" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_mar_small"
                    android:layout_marginLeft="@dimen/layout_mar_small"
                    android:layout_marginEnd="@dimen/layout_mar_small"
                    android:layout_marginRight="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:textColorHint="@android:color/darker_gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_SupplierPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:hint="@string/label_prod_sup_phone"
                        android:inputType="phone"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_med" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

    <Button
        android:id="@+id/button_Add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/button_add"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_med" />

</RelativeLayout>