<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailActivity">

    <include
        android:id="@+id/layout_Toolbar"
        layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_Order"
        android:layout_below="@id/layout_Toolbar">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_mar_med"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_mar_small"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_mar_small"
                    android:layout_marginLeft="@dimen/layout_mar_small"
                    android:layout_marginEnd="@dimen/layout_mar_small"
                    android:layout_marginRight="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:textColorHint="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_ProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:enabled="false"
                        android:hint="@string/label_prod_name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_small" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_mar_small"
                    android:layout_marginLeft="@dimen/layout_mar_small"
                    android:layout_marginEnd="@dimen/layout_mar_small"
                    android:layout_marginRight="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:textColorHint="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_ProductCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:enabled="false"
                        android:hint="@string/label_prod_category"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_small" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_mar_small"
                    android:layout_marginLeft="@dimen/layout_mar_small"
                    android:layout_marginEnd="@dimen/layout_mar_small"
                    android:layout_marginRight="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:textColorHint="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_ProductQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:enabled="false"
                        android:hint="@string/label_prod_quantity"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_small" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_mar_small"
                    android:text="@string/order_more"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_med" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_Reduce"
                        android:layout_width="@dimen/button_delete_width"
                        android:layout_height="@dimen/button_delete_height"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:background="@drawable/button_pink_round_minus"
                        android:textSize="@dimen/text_title" />

                    <TextView
                        android:id="@+id/textView_NewOrderQuantity"
                        android:layout_width="@dimen/button_delete_width"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:enabled="false"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_lar"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button_Add"
                        android:layout_width="@dimen/button_delete_width"
                        android:layout_height="@dimen/button_delete_height"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:background="@drawable/button_pink_round_add"
                        android:textSize="@dimen/text_title" />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_mar_small"
                    android:layout_marginLeft="@dimen/layout_mar_small"
                    android:layout_marginEnd="@dimen/layout_mar_small"
                    android:layout_marginRight="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:textColorHint="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_ProductPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:enabled="false"
                        android:hint="@string/label_prod_price"
                        android:inputType="number"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_small" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_mar_small"
                    android:layout_marginLeft="@dimen/layout_mar_small"
                    android:layout_marginEnd="@dimen/layout_mar_small"
                    android:layout_marginRight="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:textColorHint="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_SupplierName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:enabled="false"
                        android:hint="@string/label_prod_sup_name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_small" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/layout_mar_small"
                    android:layout_marginLeft="@dimen/layout_mar_small"
                    android:layout_marginEnd="@dimen/layout_mar_small"
                    android:layout_marginRight="@dimen/layout_mar_small"
                    android:gravity="center"
                    android:textColorHint="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_SupplierPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:enabled="false"
                        android:hint="@string/label_prod_sup_phone"
                        android:inputType="phone"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_small" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button_Delete"
                    android:layout_width="@dimen/button_delete_width"
                    android:layout_height="@dimen/button_delete_height"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/layout_mar_small"
                    android:background="@drawable/button_delete" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

    <Button
        android:id="@+id/button_Order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/button_order"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_lar" />

</RelativeLayout>
