<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_mar_med">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_mar_small"
        app:cardBackgroundColor="@android:color/darker_gray"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_mar_small"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/layout_mar_small"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_ProductName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_mar_small"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_title" />

                <Button
                    android:id="@+id/button_Detail"
                    android:layout_width="@dimen/button_width_small"
                    android:layout_height="@dimen/button_height_small"
                    android:layout_gravity="top"
                    android:layout_margin="@dimen/layout_mar_small"
                    android:background="@drawable/buttonpink"
                    android:scaleType="fitXY"
                    android:text="@string/button_detail"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_mar_small"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:gravity="start"
                        android:text="@string/label_quantity"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_small"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_ProductQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:gravity="start"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_med" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:gravity="start"
                        android:text="@string/label_price"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_small"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_ProductPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/layout_mar_small"
                        android:gravity="start"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_med" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_Sale"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorBackground"
                    android:text="@string/button_sale"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_lar" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
